--- a/DrinkOrderSystem/DOS_ORM/App.config
+++ b/DrinkOrderSystem/DOS_ORM/App.config
@@ -10,5 +10,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-
-<connectionStrings><add name="DKContextModel" connectionString="data source=.\SQLExpress;initial catalog=DrinkOrderSystem;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="DKContextModel" connectionString="data source=.\SQLExpress;initial catalog=DrinkOrderSystem;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DKContextModel1" connectionString="data source=.\SQLExpress;initial catalog=DrinkOrderSystem;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+</configuration>
