--- a/DrinkOrderSystem/DOS_Models/DOS_Models.csproj
+++ b/DrinkOrderSystem/DOS_Models/DOS_Models.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C83D443F-2986-4490-BC9A-3E7C8216CB1F}</ProjectGuid>
+    <ProjectGuid>{FB0D1951-F84A-45E2-9E6F-C3960383B71D}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DOS_DBSoure</RootNamespace>
-    <AssemblyName>DOS_DBSoure</AssemblyName>
+    <RootNamespace>DOS_Models</RootNamespace>
+    <AssemblyName>DOS_Models</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,19 +31,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Runtime.Serialization" />
-    <Reference Include="System.Security" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,26 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DBHelper.cs" />
-    <Compile Include="DrinkListManager.cs" />
-    <Compile Include="Logger.cs" />
+    <Compile Include="OrderDetailModels.cs" />
+    <Compile Include="OrderListModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tool.cs" />
-    <Compile Include="UserInfoManager.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DOS_Models\DOS_Models.csproj">
-      <Project>{fb0d1951-f84a-45e2-9e6f-c3960383b71d}</Project>
-      <Name>DOS_Models</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DOS_ORM\DOS_ORM.csproj">
-      <Project>{113ee810-4878-4a4e-9f9d-1977f6761d26}</Project>
-      <Name>DOS_ORM</Name>
-    </ProjectReference>
+    <Compile Include="UserInfoModels.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
