--- a/DrinkOrderSystem/DOS_DBSoure/DOS_DBSoure.csproj
+++ b/DrinkOrderSystem/DOS_DBSoure/DOS_DBSoure.csproj
@@ -37,6 +37,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -54,10 +57,12 @@
   <ItemGroup>
     <Compile Include="DBHelper.cs" />
     <Compile Include="DrinkListManager.cs" />
+    <Compile Include="FileUploadManager.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tool.cs" />
     <Compile Include="UserInfoManager.cs" />
+    <Compile Include="UserInfoSearch.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
