【Add】 UserList加入修改連結(ModifyUserInfo.aspx)及刪除紐 加入修改頁面基本版型 加入登入認證方法 UserManager的SQL方法移到UserManagerSQL(目前沒用到)

--- a/DrinkOrderSystem/DOS_DBSoure/DOS_DBSoure.csproj
+++ b/DrinkOrderSystem/DOS_DBSoure/DOS_DBSoure.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Tool.cs" />
     <Compile Include="UserInfoManager.cs" />
     <Compile Include="UserInfoSearch.cs" />
+    <Compile Include="UserManagerSQL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
