--- a/DrinkOrderSystem/DrinkOrderSystem/packages.config
+++ b/DrinkOrderSystem/DrinkOrderSystem/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="5.1.0" targetFramework="net48" />
+  <package id="BouncyCastle" version="1.8.6.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="iTextSharp" version="5.5.13.2" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
 </packages>
