【Add】 進入使用者介面  會判斷寄送快過期訂單的信件提醒

--- a/DrinkOrderSystem/DrinkOrderSystem/DrinkOrderSystem.csproj
+++ b/DrinkOrderSystem/DrinkOrderSystem/DrinkOrderSystem.csproj
@@ -111,6 +111,7 @@
     <Content Include="ClientSide\DrinkDetail.aspx" />
     <Content Include="ClientSide\ForgetPWD.aspx" />
     <Content Include="ClientSide\ImagesClient\admin.png" />
+    <Content Include="ClientSide\ImagesClient\BG.png" />
     <Content Include="ClientSide\ImagesClient\Logo.png" />
     <Content Include="ClientSide\ImagesClient\user.png" />
     <Content Include="ClientSide\Introduction.aspx" />
@@ -140,9 +141,21 @@
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ServerSide\ImagesServer\admin.png" />
+    <Content Include="ServerSide\ImagesServer\DefaultPhoto_admin.png" />
+    <Content Include="ServerSide\ImagesServer\DefaultPhoto_seniorAdministrator.png" />
+    <Content Include="ServerSide\ImagesServer\DefaultPhoto_user.png" />
+    <Content Include="ServerSide\ImagesServer\DefaultPictrue_product.png" />
+    <Content Include="ServerSide\ImagesServer\HappyDrink.png" />
     <Content Include="ServerSide\ImagesServer\Logo.png" />
+    <Content Include="ServerSide\ImagesServer\NowOrderList.png" />
+    <Content Include="ServerSide\ImagesServer\OrderList.png" />
+    <Content Include="ServerSide\ImagesServer\ProductsList.png" />
+    <Content Include="ServerSide\ImagesServer\StartOrderList.png" />
+    <Content Include="ServerSide\ImagesServer\SuppliersList.png" />
     <Content Include="ServerSide\ImagesServer\SystemLogo.png" />
-    <Content Include="ServerSide\ImagesServer\user.png" />
+    <Content Include="ServerSide\ImagesServer\UserInfoList.png" />
+    <Content Include="ServerSide\ImagesServer\UserOrderList.png" />
+    <Content Include="ServerSide\ImagesServer\UserPage.png" />
     <Content Include="ServerSide\ImagesServer\WhiteAlley.jpg" />
     <Content Include="ServerSide\ImagesServer\drink_icon.png" />
     <Content Include="ServerSide\ImagesServer\Fiftylan.png" />
